samples/_failures_safe/1761644168_a4d7a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf339b8b.c: In function ‘main’:
./samples/SAFE/__tmp_bf339b8b.c:142:5: error: expected declaration or statement at end of input
  142 |     }
      |     ^
